// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`00 Block tags: positive examples 1`] = `
Object {
  "buffer": "/**[n] * @one [n] * @two[n] */",
  "gaps": Array [],
  "lines": Array [
    "@one",
    "@two",
  ],
  "logMessages": Array [],
  "nodes": Object {
    "kind": "Comment",
    "nodes": Array [
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "BlockTag",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: BlockTag",
                    "nodeExcerpt": "@one",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "kind": "BlockTag",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: BlockTag",
                    "nodeExcerpt": "@two",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`01 Block tags: negative examples 1`] = `
Object {
  "buffer": "/**[n] * @ one [n] * +@two [n] * @two+ [n] */",
  "gaps": Array [],
  "lines": Array [
    "@ one",
    "+@two",
    "@two+",
  ],
  "logMessages": Array [
    "(2,4): Expecting a TSDoc tag name after the \\"@\\" character (or use a backslash to escape this character)",
    "(3,5): A TSDoc tag must be preceded by whitespace",
    "(4,4): A TSDoc tag must be followed by whitespace",
  ],
  "nodes": Object {
    "kind": "Comment",
    "nodes": Array [
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "errorLocation": "@",
                "errorMessage": "Expecting a TSDoc tag name after the [q]@[q] character (or use a backslash to escape this character)",
                "kind": "ErrorText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: ErrorText",
                    "nodeExcerpt": "@",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": " one",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "+",
                  },
                ],
              },
              Object {
                "errorLocation": "@",
                "errorLocationPrecedingToken": "+",
                "errorMessage": "A TSDoc tag must be preceded by whitespace",
                "kind": "ErrorText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: ErrorText",
                    "nodeExcerpt": "@",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "two",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "errorLocation": "@",
                "errorLocationPrecedingToken": "
",
                "errorMessage": "A TSDoc tag must be followed by whitespace",
                "kind": "ErrorText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: ErrorText",
                    "nodeExcerpt": "@",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "two+",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`02 Inline tags: simple, positive 1`] = `
Object {
  "buffer": "/**[n] * {@one} [n] * {@two } [n] * {@three}{@four} [n] * {@five [n] *   } [n] */",
  "gaps": Array [],
  "lines": Array [
    "{@one}",
    "{@two }",
    "{@three}{@four}",
    "{@five",
    "  }",
  ],
  "logMessages": Array [],
  "nodes": Object {
    "kind": "Comment",
    "nodes": Array [
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "InlineTag",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: InlineTag_OpeningDelimiter",
                    "nodeExcerpt": "{",
                  },
                  Object {
                    "kind": "Excerpt: InlineTag_TagName",
                    "nodeExcerpt": "@one",
                  },
                  Object {
                    "kind": "Excerpt: InlineTag_ClosingDelimiter",
                    "nodeExcerpt": "}",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "kind": "InlineTag",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: InlineTag_OpeningDelimiter",
                    "nodeExcerpt": "{",
                  },
                  Object {
                    "kind": "Excerpt: InlineTag_TagName",
                    "nodeExcerpt": "@two",
                  },
                  Object {
                    "kind": "Excerpt: Spacing",
                    "nodeExcerpt": " ",
                  },
                  Object {
                    "kind": "Excerpt: InlineTag_ClosingDelimiter",
                    "nodeExcerpt": "}",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "kind": "InlineTag",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: InlineTag_OpeningDelimiter",
                    "nodeExcerpt": "{",
                  },
                  Object {
                    "kind": "Excerpt: InlineTag_TagName",
                    "nodeExcerpt": "@three",
                  },
                  Object {
                    "kind": "Excerpt: InlineTag_ClosingDelimiter",
                    "nodeExcerpt": "}",
                  },
                ],
              },
              Object {
                "kind": "InlineTag",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: InlineTag_OpeningDelimiter",
                    "nodeExcerpt": "{",
                  },
                  Object {
                    "kind": "Excerpt: InlineTag_TagName",
                    "nodeExcerpt": "@four",
                  },
                  Object {
                    "kind": "Excerpt: InlineTag_ClosingDelimiter",
                    "nodeExcerpt": "}",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "kind": "InlineTag",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: InlineTag_OpeningDelimiter",
                    "nodeExcerpt": "{",
                  },
                  Object {
                    "kind": "Excerpt: InlineTag_TagName",
                    "nodeExcerpt": "@five",
                  },
                  Object {
                    "kind": "Excerpt: Spacing",
                    "nodeExcerpt": "[n]  ",
                  },
                  Object {
                    "kind": "Excerpt: InlineTag_ClosingDelimiter",
                    "nodeExcerpt": "}",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`03 Inline tags: simple, negative 1`] = `
Object {
  "buffer": "/**[n] * {@ one} [n] * {@two~} [n] * { @three} [n] * {@four[n] */",
  "gaps": Array [],
  "lines": Array [
    "{@ one}",
    "{@two~}",
    "{ @three}",
    "{@four",
  ],
  "logMessages": Array [
    "(2,4): Expecting a TSDoc inline tag name after the \\"{@\\" characters",
    "(2,10): The \\"}\\" character should be escaped using a backslash to avoid confusion with a TSDoc inline tag",
    "(3,4): Expecting a space after the TSDoc inline tag name",
    "(3,10): The \\"}\\" character should be escaped using a backslash to avoid confusion with a TSDoc inline tag",
    "(4,4): Expecting a TSDoc tag starting with \\"{@\\"",
    "(4,6): A TSDoc tag must be followed by whitespace",
    "(4,12): The \\"}\\" character should be escaped using a backslash to avoid confusion with a TSDoc inline tag",
    "(5,4): The TSDoc inline tag name is missing its closing \\"}\\"",
  ],
  "nodes": Object {
    "kind": "Comment",
    "nodes": Array [
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "errorLocation": "@",
                "errorLocationPrecedingToken": "{",
                "errorMessage": "Expecting a TSDoc inline tag name after the [q]{@[q] characters",
                "kind": "ErrorText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: ErrorText",
                    "nodeExcerpt": "{@",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": " one",
                  },
                ],
              },
              Object {
                "errorLocation": "}",
                "errorLocationPrecedingToken": "one",
                "errorMessage": "The [q]}[q] character should be escaped using a backslash to avoid confusion with a TSDoc inline tag",
                "kind": "ErrorText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: ErrorText",
                    "nodeExcerpt": "}",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "errorLocation": "~",
                "errorLocationPrecedingToken": "two",
                "errorMessage": "Expecting a space after the TSDoc inline tag name",
                "kind": "ErrorText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: ErrorText",
                    "nodeExcerpt": "{@",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "two~",
                  },
                ],
              },
              Object {
                "errorLocation": "}",
                "errorLocationPrecedingToken": "~",
                "errorMessage": "The [q]}[q] character should be escaped using a backslash to avoid confusion with a TSDoc inline tag",
                "kind": "ErrorText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: ErrorText",
                    "nodeExcerpt": "}",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "errorLocation": "{",
                "errorLocationPrecedingToken": "
",
                "errorMessage": "Expecting a TSDoc tag starting with [q]{@[q]",
                "kind": "ErrorText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: ErrorText",
                    "nodeExcerpt": "{",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": " ",
                  },
                ],
              },
              Object {
                "errorLocation": "@",
                "errorLocationPrecedingToken": " ",
                "errorMessage": "A TSDoc tag must be followed by whitespace",
                "kind": "ErrorText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: ErrorText",
                    "nodeExcerpt": "@",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "three",
                  },
                ],
              },
              Object {
                "errorLocation": "}",
                "errorLocationPrecedingToken": "three",
                "errorMessage": "The [q]}[q] character should be escaped using a backslash to avoid confusion with a TSDoc inline tag",
                "kind": "ErrorText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: ErrorText",
                    "nodeExcerpt": "}",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "errorLocation": "{@",
                "errorLocationPrecedingToken": "
",
                "errorMessage": "The TSDoc inline tag name is missing its closing [q]}[q]",
                "kind": "ErrorText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: ErrorText",
                    "nodeExcerpt": "{@",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "four",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`04 Inline tags: complex, positive 1`] = `
Object {
  "buffer": "/**[n] * {@one some content}[n] * {@two multi[n] * line}[n] */",
  "gaps": Array [],
  "lines": Array [
    "{@one some content}",
    "{@two multi",
    "line}",
  ],
  "logMessages": Array [],
  "nodes": Object {
    "kind": "Comment",
    "nodes": Array [
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "InlineTag",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: InlineTag_OpeningDelimiter",
                    "nodeExcerpt": "{",
                  },
                  Object {
                    "kind": "Excerpt: InlineTag_TagName",
                    "nodeExcerpt": "@one",
                  },
                  Object {
                    "kind": "Excerpt: Spacing",
                    "nodeExcerpt": " ",
                  },
                  Object {
                    "kind": "Excerpt: InlineTag_TagContent",
                    "nodeExcerpt": "some content",
                  },
                  Object {
                    "kind": "Excerpt: InlineTag_ClosingDelimiter",
                    "nodeExcerpt": "}",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
              Object {
                "kind": "InlineTag",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: InlineTag_OpeningDelimiter",
                    "nodeExcerpt": "{",
                  },
                  Object {
                    "kind": "Excerpt: InlineTag_TagName",
                    "nodeExcerpt": "@two",
                  },
                  Object {
                    "kind": "Excerpt: Spacing",
                    "nodeExcerpt": " ",
                  },
                  Object {
                    "kind": "Excerpt: InlineTag_TagContent",
                    "nodeExcerpt": "multi[n]line",
                  },
                  Object {
                    "kind": "Excerpt: InlineTag_ClosingDelimiter",
                    "nodeExcerpt": "}",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`04 Inline tags: complex, positive 2`] = `
Object {
  "buffer": "/**[n] * {@three @taglike}[n] */",
  "gaps": Array [],
  "lines": Array [
    "{@three @taglike}",
  ],
  "logMessages": Array [],
  "nodes": Object {
    "kind": "Comment",
    "nodes": Array [
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "InlineTag",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: InlineTag_OpeningDelimiter",
                    "nodeExcerpt": "{",
                  },
                  Object {
                    "kind": "Excerpt: InlineTag_TagName",
                    "nodeExcerpt": "@three",
                  },
                  Object {
                    "kind": "Excerpt: Spacing",
                    "nodeExcerpt": " ",
                  },
                  Object {
                    "kind": "Excerpt: InlineTag_TagContent",
                    "nodeExcerpt": "@taglike",
                  },
                  Object {
                    "kind": "Excerpt: InlineTag_ClosingDelimiter",
                    "nodeExcerpt": "}",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`05 Inline tags: escaping, positive 1`] = `
Object {
  "buffer": "/**[n] * {@one left [b]{ right [b]} backslash [b][b] }[n] */",
  "gaps": Array [],
  "lines": Array [
    "{@one left [b]{ right [b]} backslash [b][b] }",
  ],
  "logMessages": Array [],
  "nodes": Object {
    "kind": "Comment",
    "nodes": Array [
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "InlineTag",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: InlineTag_OpeningDelimiter",
                    "nodeExcerpt": "{",
                  },
                  Object {
                    "kind": "Excerpt: InlineTag_TagName",
                    "nodeExcerpt": "@one",
                  },
                  Object {
                    "kind": "Excerpt: Spacing",
                    "nodeExcerpt": " ",
                  },
                  Object {
                    "kind": "Excerpt: InlineTag_TagContent",
                    "nodeExcerpt": "left [b]{ right [b]} backslash [b][b] ",
                  },
                  Object {
                    "kind": "Excerpt: InlineTag_ClosingDelimiter",
                    "nodeExcerpt": "}",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`06 Inline tags: escaping, negative 1`] = `
Object {
  "buffer": "/**[n] * {@one curly[b]}[n] */",
  "gaps": Array [],
  "lines": Array [
    "{@one curly[b]}",
  ],
  "logMessages": Array [
    "(2,4): The TSDoc inline tag name is missing its closing \\"}\\"",
  ],
  "nodes": Object {
    "kind": "Comment",
    "nodes": Array [
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "errorLocation": "{@",
                "errorMessage": "The TSDoc inline tag name is missing its closing [q]}[q]",
                "kind": "ErrorText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: ErrorText",
                    "nodeExcerpt": "{@",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "one curly",
                  },
                ],
              },
              Object {
                "kind": "EscapedText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: EscapedText",
                    "nodeExcerpt": "[b]}",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`06 Inline tags: escaping, negative 2`] = `
Object {
  "buffer": "/**[n] * {@two curly{}}[n] */",
  "gaps": Array [],
  "lines": Array [
    "{@two curly{}}",
  ],
  "logMessages": Array [
    "(2,4): The \\"{\\" character must be escaped with a backslash when used inside a TSDoc inline tag",
    "(2,15): Expecting a TSDoc tag starting with \\"{@\\"",
    "(2,16): The \\"}\\" character should be escaped using a backslash to avoid confusion with a TSDoc inline tag",
    "(2,17): The \\"}\\" character should be escaped using a backslash to avoid confusion with a TSDoc inline tag",
  ],
  "nodes": Object {
    "kind": "Comment",
    "nodes": Array [
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "errorLocation": "{",
                "errorLocationPrecedingToken": "curly",
                "errorMessage": "The [q]{[q] character must be escaped with a backslash when used inside a TSDoc inline tag",
                "kind": "ErrorText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: ErrorText",
                    "nodeExcerpt": "{@",
                  },
                ],
              },
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "two curly",
                  },
                ],
              },
              Object {
                "errorLocation": "{",
                "errorLocationPrecedingToken": "curly",
                "errorMessage": "Expecting a TSDoc tag starting with [q]{@[q]",
                "kind": "ErrorText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: ErrorText",
                    "nodeExcerpt": "{",
                  },
                ],
              },
              Object {
                "errorLocation": "}",
                "errorLocationPrecedingToken": "{",
                "errorMessage": "The [q]}[q] character should be escaped using a backslash to avoid confusion with a TSDoc inline tag",
                "kind": "ErrorText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: ErrorText",
                    "nodeExcerpt": "}",
                  },
                ],
              },
              Object {
                "errorLocation": "}",
                "errorLocationPrecedingToken": "}",
                "errorMessage": "The [q]}[q] character should be escaped using a backslash to avoid confusion with a TSDoc inline tag",
                "kind": "ErrorText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: ErrorText",
                    "nodeExcerpt": "}",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`06 Inline tags: escaping, negative 3`] = `
Object {
  "buffer": "/**[n] * three: }[n] */",
  "gaps": Array [],
  "lines": Array [
    "three: }",
  ],
  "logMessages": Array [
    "(2,11): The \\"}\\" character should be escaped using a backslash to avoid confusion with a TSDoc inline tag",
  ],
  "nodes": Object {
    "kind": "Comment",
    "nodes": Array [
      Object {
        "kind": "Section",
        "nodes": Array [
          Object {
            "kind": "Paragraph",
            "nodes": Array [
              Object {
                "kind": "PlainText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: PlainText",
                    "nodeExcerpt": "three: ",
                  },
                ],
              },
              Object {
                "errorLocation": "}",
                "errorLocationPrecedingToken": " ",
                "errorMessage": "The [q]}[q] character should be escaped using a backslash to avoid confusion with a TSDoc inline tag",
                "kind": "ErrorText",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: ErrorText",
                    "nodeExcerpt": "}",
                  },
                ],
              },
              Object {
                "kind": "SoftBreak",
                "nodes": Array [
                  Object {
                    "kind": "Excerpt: SoftBreak",
                    "nodeExcerpt": "[n]",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;
